fix(login): more spacing for delete account link (#3307)

--- a/pages/auth/unlock/Unlock.less
+++ b/pages/auth/unlock/Unlock.less
@@ -33,6 +33,7 @@
       font-family: @secondary-font;
       font-size: 10pt;
       color: white;
+      margin-top: @large-spacing;
       &:hover {
         opacity: 0.75;
       }
